--- a/index.html
+++ b/index.html
@@ -127,9 +127,22 @@
         <h2>Roc fa 3 anys!</h2>
         <p class="lead">I volem celebrar-ho amb tu!</p>
         <hr />
-        <p><strong>📅 Data:</strong> Dissabte, 21 de juny</p>
-        <p><strong>🕖 Hora:</strong> A les 19:00 de la vesprada</p>
-        <p><strong>📍 Lloc:</strong> A casa de la seua mamà</p>
+        <p><strong>📅 Data:</strong> Diumenge, 22 de juny</p>
+        <p><strong>🕖 Hora:</strong> A les 17:00 de la vesprada</p>
+        <p>
+          <strong>📍 Lloc:</strong>
+          <button
+            type="button"
+            class="btn btn-outline-primary btn-sm"
+            data-bs-toggle="popover"
+            data-bs-placement="top"
+            data-bs-trigger="focus"
+            data-bs-content="Carrer Ramón i Cajal, 3, 46712 Piles, València"
+          >
+            Barrufets - Piles
+          </button>
+        </p>
+
         <p>Hi haurà dinosaures, jocs, pasteló... i molts riures! 🎂</p>
 
         <div class="alerta-alert animate-postit">
@@ -145,6 +158,8 @@
     </div>
     <!-- Confeti -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       // Llançament de confeti automàtic cada pocs segons
       setInterval(() => {
@@ -154,8 +169,12 @@
           origin: { y: 0.2 },
         });
       }, 3000);
-    </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+      // Inicialitza tots els popovers
+      const popoverTriggerList = document.querySelectorAll(
+        '[data-bs-toggle="popover"]'
+      );
+      popoverTriggerList.forEach((el) => new bootstrap.Popover(el));
+    </script>
   </body>
 </html>
