--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
 
     <style>
       body {
@@ -149,7 +150,7 @@
           <div class="xinxeta">📌</div>
           <h5 class="mb-2 text-danger fw-bold">🚨 ATENCIÓ!</h5>
           <p class="mb-0">
-            Podria haver canvis d’última hora en l’hora o el lloc.<br />
+            Podria haver canvis d'última hora en l'hora o el lloc.<br />
             Torna a visitar aquesta pàgina abans del dia de la festa per
             assegurar-te!
           </p>
