--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
 
     <style>
       body {
@@ -16,7 +16,7 @@
         background-size: cover;
         background-repeat: repeat;
         background-attachment: fixed;
-        font-family: "Comic Sans MS", cursive, sans-serif;
+        font-family: 'Baloo 2', cursive;
         overflow-x: hidden;
       }
 
