--- a/index.html
+++ b/index.html
@@ -8,16 +8,34 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-<link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
 
     <style>
+      @font-face {
+        font-family: 'Lolicandy';
+        src: url('Tipos/DinoTime.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
+
+      @font-face {
+        font-family: 'FKDino';
+        src: url('Tipos/FK_Dino.otf') format('opentype');
+        font-weight: normal;
+        font-style: normal;
+      }
+
       body {
         background-image: url("backgroundDinos.jpg");
         background-size: cover;
         background-repeat: repeat;
         background-attachment: fixed;
-        font-family: 'Baloo 2', cursive;
+        font-family: 'Lolicandy', cursive;
         overflow-x: hidden;
+        font-size: 1.3rem;
+      }
+
+      .dino-title {
+        font-family: 'FKDino', cursive;
       }
 
       .invitation-card {
@@ -59,7 +77,7 @@
         max-width: 280px;
         box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.3);
         transform: rotate(-3deg);
-        font-family: "Comic Sans MS", cursive, sans-serif;
+        font-family: 'Lolicandy', cursive;
         opacity: 0;
         animation: fadeInPostit 2s ease-out 2s forwards;
         z-index: 5;
@@ -124,8 +142,8 @@
       <div class="invitation-card">
         <img src="dino1.png" alt="Dinosaure simpàtic" class="dino-img mb-3" />
 
-        <h1 class="text-success">Rooaarr! 🎉</h1>
-        <h2>Roc fa 3 anys!</h2>
+        <h1 class="text-success dino-title">Rooaarr! 🎉</h1>
+        <h2 class="dino-title">Roc fa 3 anys!</h2>
         <p class="lead">I volem celebrar-ho amb tu!</p>
         <hr />
         <p><strong>📅 Data:</strong> Diumenge, 22 de juny</p>
