--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
         }
       }
 
-      /* Avís estil post-it dins del quadre */
       .alerta-alert {
         position: relative;
         margin-top: 1rem;
@@ -111,7 +110,6 @@
         }
       }
 
-      /* Dinosaure corrent */
       .gif {
         position: absolute;
         bottom: 10px;
@@ -133,7 +131,18 @@
 
       .botonet {
         font-size: 1.2rem;
-  padding: 0.2rem 0.4rem;
+        padding: 0.2rem 0.4rem;
+      }
+
+      .confirmar-box {
+        background-color: #d1f7d6;
+        border: 2px dashed #2e7d32;
+        border-radius: 0.75rem;
+        padding: 1rem;
+        margin-top: 2rem;
+        font-weight: bold;
+        font-size: 1.2rem;
+        color: #1b5e20;
       }
     </style>
   </head>
@@ -142,6 +151,7 @@
     <div class="gif">
       <img src="corrent.gif" alt="Dinosaure corrent" />
     </div>
+
     <!-- Contingut -->
     <div class="container text-center">
       <div class="invitation-card">
@@ -152,23 +162,28 @@
         <p class="lead">I volem celebrar-ho amb tu!</p>
         <hr />
         <p><strong>📅 Data:</strong> Diumenge, 22 de juny</p>
-        <p><strong>🕖 Hora:</strong> A les 17:00 de la vesprada</p>
+        <p><strong>🕖 Hora:</strong> A les 17:30 de la vesprada</p>
         <p>
           <strong>📍 Lloc:</strong>
           <button
-  type="button"
-  class="btn btn-outline-success btn-sm botonet"
-  data-bs-toggle="tooltip"
-  data-bs-placement="top"
-  title="Carrer Ramón i Cajal, 3, 46712 Piles, València"
->
-  Barrufets - Piles
-</button>
-
+            type="button"
+            class="btn btn-outline-success btn-sm botonet"
+            data-bs-toggle="tooltip"
+            data-bs-placement="top"
+            title="Carrer Ramón i Cajal, 3, 46712 Piles, València"
+          >
+            Barrufets - Piles
+          </button>
         </p>
 
         <p>Hi haurà dinosaures, jocs, pasteló... i molts riures! 🎂</p>
 
+        <!-- Confirmar assistència -->
+        <div class="confirmar-box">
+          ✔️ Confirmeu l'assistència a Andrea o Vicent!<br />
+        </div>
+
+        <!-- Avís -->
         <div class="alerta-alert animate-postit">
           <div class="xinxeta">📌</div>
           <h5 class="mb-2 text-danger fw-bold">🚨 ATENCIÓ!</h5>
@@ -180,9 +195,9 @@
         </div>
       </div>
     </div>
+
     <!-- Confeti -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       // Llançament de confeti automàtic cada pocs segons
@@ -196,8 +211,7 @@
 
       // Tooltip
       const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-tooltipTriggerList.forEach((el) => new bootstrap.Tooltip(el));
-
+      tooltipTriggerList.forEach((el) => new bootstrap.Tooltip(el));
     </script>
   </body>
 </html>
